fixed gallery spacing and numbers in mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,8 @@
+.well {
+  min-height: 20px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
 .top-buffer-extra {
   margin-top: 40px;
 }
